# Python-Selenium-BDD-POM

./: .gitignore  README.md  Requirements.txt  pyproject.toml
Reports/: 02f27515-a4d1-48c0-8a5e-ed9a100befa5-result.json  9700fac6-e371-4912-8d33-b4a59cd106b3-result.json  b3505b74-e589-4953-ac81-8a10511a7cc5-result.json
Test-artifacts/Reports/: 3a16c104-0986-4094-8607-259d83b560ae-result.json  cf366b69-efa3-4676-a46d-907f59aee78a-result.json
configurations/: config.ini
features/: environment.py  login.feature
features/Pages/: login_page.py
features/steps/: login.py
utilities/: capture_screenshots.py  config_reader.py  generating_logs.py
